<resources>
    <string name="app_name">NextCrops</string>
    <string name="default_font">fonts/Roboto-Light.ttf</string>
    <string name="font_awsome">fonts/fa-light-300.ttf</string>
    <string name="font_bold">fonts/Roboto-Bold.ttf</string>
    <string name="font_italic">fonts/Roboto-Italic.ttf</string>
    <string name="font_light">fonts/Roboto-Light.ttf</string>
    <string name="font_regular">fonts/Roboto-Regular.ttf</string>
    <string name="select_location">Please select your state to start</string>
    <string name="btn_vic">Victoria</string>
    <string name="btn_queensland">Queensland</string>
    <string name="btn_auto_detect">Auto detect location</string>
    <string name="draw_close">draw close</string>
    <string name="draw_open">draw open</string>
    <string name="btn_live_inspection">Live Inspection</string>
    <string name="your_farm">Your Farm Land</string>
    <string name="farm_name">Land name</string>
    <string name="clay_percentage">\uf541 Clay Percentage</string>
    <string name="top_soil">Top Soil:</string>
    <string name="stddev">Standard deviation:</string>
    <string name="subsoil">Sub Soil:</string>
    <string name="ph">\uf0c3 Ph Value</string>
    <string name="organic_carbon">\uf094 Organic Carbon Percentage</string>
    <string name="electrical_conductivity">\uf0e7 Electrical Conductivity Value</string>
    <string name="soil_class">Soil Classification:</string>
    <string name="top_soil_texture">Top Soil Texture:</string>
    <string name="sub_soil_texture">Sub Soil Texture:</string>
    <string name="suggested_crops">\uf4d8 Suggested crops</string>
    <string name="add_farm">Add Land</string>
    <string name="location">Location</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="error_missing_farm_name">Please enter a name for your land</string>
    <string name="error_missing_location">Please select your land location from the map</string>
    <string name="ok">OK</string>
    <string name="add_to_planner">Add to planner</string>
    <string name="progress_get_soil_info">Getting location and analysing the soil</string>
    <string name="menu_use_water_wise">\uf4c1 Use Water Wise</string>
    <string name="menu_switch_location">\uf362 Switch State</string>
    <string name="menu_order_crops_seeds">\uf07a Order seeds</string>
    <string name="menu_planner">\uf546 Crops Planner</string>
    <string name="menu_budget_planner">\uf4c5 Budget Planner</string>
    <string name="request_soil_test">\uf0c3 Request Soil Sample Analysis</string>
    <string name="project_code">Project Code: </string>
    <string name="sample_number">Sample Number: </string>
    <string name="lab_method_code">Lab Method Code: </string>
    <string name="lab_code">Lab Code: </string>
    <string name="analysis_date">Analysis Date: </string>
    <string name="result_status">Result Status: </string>
    <string name="progress_get_suggest_crops">Analysing existing soil sample results</string>
</resources>
