<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:padding="4dp"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.arvis.nextcrops.ui.view.FontedTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_code"/>

        <com.arvis.nextcrops.ui.view.FontedTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/project_code"
            android:layout_marginLeft="2dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp">

        <com.arvis.nextcrops.ui.view.FontedTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_number"/>

        <com.arvis.nextcrops.ui.view.FontedTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sample_number"
            android:layout_marginLeft="2dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp">

        <com.arvis.nextcrops.ui.view.FontedTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lab_code"/>

        <com.arvis.nextcrops.ui.view.FontedTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lab_code"
            android:layout_marginLeft="2dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp">

        <com.arvis.nextcrops.ui.view.FontedTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lab_method_code"/>

        <com.arvis.nextcrops.ui.view.FontedTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lab_method_code"
            android:layout_marginLeft="2dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp">

        <com.arvis.nextcrops.ui.view.FontedTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/analysis_date"/>

        <com.arvis.nextcrops.ui.view.FontedTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/analysis_date"
            android:layout_marginLeft="2dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp">

        <com.arvis.nextcrops.ui.view.FontedTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_status"/>

        <com.arvis.nextcrops.ui.view.FontedTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/result_status"
            android:layout_marginLeft="2dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorQueensland"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"/>

</LinearLayout>