<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/farm_info_panel"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/farm_info_panel"
        android:layout_alignParentBottom="true"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/farm_name"
                    android:inputType="text"
                    android:imeOptions="actionDone"
                    android:id="@+id/input_farm_name"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/location"
                    android:inputType="text"
                    android:enabled="false"
                    android:id="@+id/farm_location"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.arvis.nextcrops.ui.view.FontedButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_save_farm"
                style="@style/VicButton"
                android:text="@string/btn_save"
                />

            <com.arvis.nextcrops.ui.view.FontedButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_cancel"
                android:text="@string/btn_cancel"
                style="@style/VicButton"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>